<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#747373"
    tools:context="techercise.onerepmaxcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:text="@string/weight"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="2"
        android:id="@+id/editText"
        android:layout_toRightOf="@id/textView"
        android:layout_toEndOf="@id/textView"
        android:layout_alignBaseline="@id/textView"
        android:textColor="#0dff00"
        />

    <TextView
        android:text="@string/reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView"
        android:layout_alignLeft="@id/textView"
        android:layout_alignStart="@id/textView"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="#ffffff"
        android:id="@+id/textView2"
        android:textSize="18sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="2"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@id/textView2"
        android:layout_toEndOf="@id/textView2"
        android:layout_alignBaseline="@id/textView2"
        android:textColor="#0dff00"
        android:id="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="buttonSubmit"
        android:text="@string/submitBtnText"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:text="@string/Formulas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_below="@+id/textView5"
        android:layout_above="@+id/button2"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:textColor="#0dff00"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearSubmit"
        android:text="@string/clearBtnText"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/tv_results"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:background="#000000"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
